https://bugs.webkit.org/show_bug.cgi?id=87774 REGRESSION (r105515): reflection masks are truncated at zoom levels < 1 -and corresponding- <rdar://problem/11387506>

Reviewed by Simon Fraser.

Source/WebCore:

paintNinePieceImage() expects un-zoomed results from
calculateImageIntrinsicDimensions(). This was previously addressed by having
paintNinePieceImage() divide the effective zoom out of the result from
calculateImageIntrinsicDimensions(). However, that results in buggy behavior for
generated images and images with percentage sizes. In the end it seems best to
just send a parameter to calculateImageIntrinsicDimensions() indicating whether
the caller wants the result to be scaled by the effective zoom when appropriate.

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::calculateImageIntrinsicDimensions):
(WebCore::RenderBoxModelObject::calculateFillTileSize):
(WebCore::RenderBoxModelObject::paintNinePieceImage):
* rendering/RenderBoxModelObject.h:
(RenderBoxModelObject):

LayoutTests:

* fast/reflections/reflection-with-zoom.html: Added.
* platform/mac/fast/reflections/reflection-with-zoom-expected.png: Added.
* platform/mac/fast/reflections/reflection-with-zoom-expected.txt: Added.



Canonical link: https://commits.webkit.org/105951@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119274 268f45cc-cd09-0410-ab3c-d52691b4dbfc